# gobol

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  example.gbl  example.out.c  install.py  language.md  main.cpp  tmp.txt
AST/: AST.cpp  AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp  ASTPrinter.hpp
Bytecode/: BytecodeModule.cpp  BytecodeModule.hpp  CallFrame.cpp  CallFrame.hpp  Compiler.cpp  Compiler.hpp  FormatPiece.hpp  OpCode.hpp  RuntimeValue.cpp  RuntimeValue.hpp  VirtualMachine.cpp  VirtualMachine.hpp
Environment/: Environment.cpp  Environment.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
Interpreter/: Interpreter.cpp  Interpreter.hpp
Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
lib/: __builtin__.gbl  vec.gbl
src/: ast.rs  ast_builder.rs  ast_printer.rs  ccompiler.rs  codegen_c.rs  environment.rs  error.rs  executor.rs  ir.rs  lexer.rs  lib.rs  main.rs  semantic_analyzer.rs  token.rs  value.rs
std/: __setup__.gbl  io.gbl  math.gbl  range.gbl  vec.gbl
std/c/: __builtins__.c
tests/: common.rs  executor_tests.rs  generated_tests.rs  integration.rs  lexer_tests.rs  parser_tests.rs
tests/common/: mod.rs
tests/fixtures/advanced/: bubble_sort.gbl  fibonacci.gbl  prime_numbers.gbl
tests/fixtures/arrays/: array_add.gbl  array_index.gbl  array_literal.gbl
tests/fixtures/basic/: hello_world.gbl  variables.gbl
tests/fixtures/control_flow/: break_continue.gbl  for_index_value.gbl  for_loop.gbl  for_string.gbl  if_else.gbl  if_else_if.gbl  while_loop.gbl
tests/fixtures/errors/: assign_to_const.gbl  missing_return.gbl  type_mismatch.gbl  undefined_variable.gbl
tests/fixtures/expressions/: block_expr.gbl  implicit_return.gbl  match_expr.gbl
tests/fixtures/functions/: add.gbl  factorial.gbl  void_return.gbl
tests/fixtures/modules/: main.gbl
tests/fixtures/modules/lib/: math.gbl
tests/fixtures/structs/: constructor.gbl  point.gbl  rectangle.gbl
tests/fixtures/types/: nullable.gbl  println.gbl  type_conversion.gbl
